# octanex-module

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  verify-octanex-module.py
docs/: PLAN.md
octanex_module_api/: README.md  octanemoduleapi.cpp  octanemoduleapi.h
queue/: test_x.json
scripts/: build-release.sh  install-to-octane.sh  start-octane-with-module.sh
src/: octanex.c  octanex.h  octanex_commands.cpp  octanex_commands.h  octanex_fallback.cpp  octanex_fallback.h  octanex_ffi.cpp  octanex_module.cpp
src/octanex_bridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/octanex_mcp/: README.md  __init__.py  bridge.py
test/: test_commands.cpp  test_module_loading.cpp
